fix: change text transformation to capitalize for improved readability

--- a/contact.css
+++ b/contact.css
@@ -373,7 +373,7 @@ body{
 }
 
 .skills{
-    text-transform: uppercase;
+    text-transform: capitalize;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr ;
     font-weight: 500;
